improve "lighthouse" score

--- a/Flight Booking App UI/index.html
+++ b/Flight Booking App UI/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Flight Booking App</title>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <meta name="Description" content="Flight Booking App UI">
+    <meta name="Keywords" content="flight booking ui">
     <script async src="./scripts/time.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -114,12 +115,12 @@
                                     </li>
                                     <li class="round-trip-text">Round Trip</li>
                                 </ul>
-                                <ul>
-                                    <label class="toggler-checkbox" for="toggle">
+                                <div>
+                                    <label class="toggler-checkbox" for="toggle" aria-label="checkbox">
                                         <input type="checkbox" id="toggle" name="month-year">
                                         <span class="toggler"></span>
                                     </label>
-                                </ul>
+                                </div>
                             </span>
                         </div>
                         <div class="full-flight-details_wrapper">
