add page contents

--- a/Testimonial Page/index.html
+++ b/Testimonial Page/index.html
@@ -5,11 +5,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Testimonial</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <p>Hello World</p>
+    <main class="container">
+        <div class="testimonial-card">
+            <div class="image-container">
+                <img class="profile-image"
+                    src="https://res.cloudinary.com/dvhndpbun/image/upload/q_auto:eco,r_12:0:0:12/v1589572671/profile_lss0jj.png"
+                    alt="person image">
+            </div>
+            <div class="testimonial-content">
+                <span class="quote-sign">“</span>
+                <blockquote>
+                    <p class="quote-text">Like Neo from the Matrix, the world opens up and you start to see everything
+                        in 1’s and 0’s</p>
+
+                    <h3>Edward S. Hisey</h3>
+                    <p class="small-text">Chief Marketing Officer</p>
+                </blockquote>
+
+
+            </div>
+        </div>
+        <div class="logos-cont">
+            <span><img src="./assets/weebly.svg" alt="weebly logo"></span>
+            <span><img src="./assets/tesla.svg" alt="tesla logo"></span>
+            <span><img src="./assets/tnw.svg" alt="tnw logo"></span>
+            <span><img src="./assets/cpanel.svg" alt="cpanel logo"></span>
+
+
+            <button class="btn">View all</button>
+        </div>
+    </main>
 </body>
 
 </html>
