add elements interactivity and hover effects

--- a/Testimonial Page/index.html
+++ b/Testimonial Page/index.html
@@ -18,16 +18,17 @@
                     alt="person image">
             </div>
             <div class="testimonial-content">
-                <span class="quote-sign">“</span>
-                <blockquote>
-                    <p class="quote-text">Like Neo from the Matrix, the world opens up and you start to see everything
-                        in 1’s and 0’s</p>
+                <span class="content-wrapper">
+                    <span class="quote-sign">“</span>
+                    <blockquote>
+                        <p class="quote-text">Like Neo from the Matrix, the world opens up and you start to see
+                            everything
+                            in 1’s and 0’s</p>
 
-                    <h3>Edward S. Hisey</h3>
-                    <p class="small-text">Chief Marketing Officer</p>
-                </blockquote>
-
-
+                        <h3>Edward S. Hisey</h3>
+                        <p class="small-text">Chief Marketing Officer</p>
+                    </blockquote>
+                </span>
             </div>
         </div>
         <div class="logos-cont">
@@ -37,7 +38,10 @@
             <span><img src="./assets/cpanel.svg" alt="cpanel logo"></span>
 
 
-            <button class="btn">View all</button>
+            <button class="btn">
+                <p class="btn-text">View all</p>
+                <img src="./assets/front-arrow.svg" alt="">
+            </button>
         </div>
     </main>
 </body>
