align elements properly on smaller screens

--- a/Testimonial Page/index.html
+++ b/Testimonial Page/index.html
@@ -14,7 +14,7 @@
         <div class="testimonial-card">
             <div class="image-container">
                 <img class="profile-image"
-                    src="https://res.cloudinary.com/dvhndpbun/image/upload/q_auto:eco,r_12:0:0:12/v1589572671/profile_lss0jj.png"
+                    src="https://res.cloudinary.com/dvhndpbun/image/upload/q_auto:eco/v1589572671/profile_lss0jj.png"
                     alt="person image">
             </div>
             <div class="testimonial-content">
