--- a/Song Card/index.html
+++ b/Song Card/index.html
@@ -23,9 +23,11 @@
             </div>
             <div class="button-cont">
                 <span class="btn-outer-wrapper">
-                    <span class="btn-inner-wrapper">
-                        <img class="btn-icon" src="./img/play-icon.svg" alt="">
-                    </span>
+                    <label for="toggle" class="btn-inner-wrapper">
+                        <input class="hidden" type="checkbox" name="" id="toggle">
+                        <img class="btn-icon play-icon" src="./img/play-icon.svg" alt="play">
+                        <img class="pause-icon" src="./img/pause-icon.svg" alt="pause">
+                    </label>
                 </span>
 
             </div>
