change profile image

--- a/Dashboard UI/index.html
+++ b/Dashboard UI/index.html
@@ -31,7 +31,7 @@
                             </button></li>
                         <li class="notification-icon"><img class="bell-icon" src="./img/bell-icon.svg" alt="bell icon">
                         </li>
-                        <li><img src="./img/profile-image.png" alt="profile picture"></li>
+                        <li><img class="profile-image" src="./img/profile-image.png" alt="profile picture"></li>
                     </ul>
                 </div>
             </div>
