add interactivity, hover states and transitions to elements

--- a/Dashboard UI/index.html
+++ b/Dashboard UI/index.html
@@ -30,6 +30,7 @@
                                 <p>Add new segment</p>
                             </button></li>
                         <li class="notification-icon"><img class="bell-icon" src="./img/bell-icon.svg" alt="bell icon">
+                            <span class="notification-count">3</span>
                         </li>
                         <li><img class="profile-image" src="./img/profile-image.png" alt="profile picture"></li>
                     </ul>
@@ -62,6 +63,11 @@
                 <p>New users</p>
                 <h2 class="num-users">6,245</h2>
                 <div class="line-chart_wrapper">
+                    <span class="node color-2"></span>
+                    <span class="stats-popup">
+                        <h3>2,486</h3>
+                        <p>Apr. 20</p>
+                    </span>
                     <img src="./img/linechart-2.svg" alt="chart image">
                 </div>
             </span>
