add media query

--- a/Notifications Modal/index.html
+++ b/Notifications Modal/index.html
@@ -23,8 +23,10 @@
                 <div class="notification-modal__item">
 
                     <label for="not">
+
+                        <input type="radio" name="subscribe" id="not" value="not subscribed" required>
                         <span class="radio-outline">
-                            <input type="radio" name="subscribe" id="not" value="not subscribed" required>
+                            <span class="radio-inner_circle"></span>
                         </span>
                         Not subscribed
                     </label>
@@ -33,8 +35,10 @@
                 </div>
                 <div class="notification-modal__item">
                     <label for="sub">
+
+                        <input type="radio" name="subscribe" id="sub" value="subscribed">
                         <span class="radio-outline">
-                            <input type="radio" name="subscribe" id="sub" value="subscribed">
+                            <span class="radio-inner_circle"></span>
                         </span>
                         subscribed
                     </label>
@@ -42,8 +46,10 @@
                 </div>
                 <div class="notification-modal__item">
                     <label for="custom">
+
+                        <input type="radio" name="subscribe" id="custom" value="">
                         <span class="radio-outline">
-                            <input type="radio" name="subscribe" id="custom" value="">
+                            <span class="radio-inner_circle"></span>
                         </span>
                         subscribed
                     </label>
