add page contents

--- a/Subscribe Card/index.html
+++ b/Subscribe Card/index.html
@@ -5,11 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Subscribe</title>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <main class="container">
+        <div class="card">
+            <div class="card-icon">
+                <img class="envelope-icon"
+                    src="https://res.cloudinary.com/dvhndpbun/image/upload/v1590616019/envelope_qeguas.png" alt="">
+            </div>
+            <div class="card-text">
+                <h3>
+                    Get the latest components right into your inbox!
+                </h3>
+                <p>Join 4k+ happ subscribers!</p>
+            </div>
+            <div class="card-input">
+                <form action="">
+                    <input type="email" placeholder="Enter your email">
+                    <button>Subscribe</button>
+                </form>
+            </div>
 
+        </div>
+    </main>
 </body>
 
 </html>
