align items properly and set media breakpoint for smaller screens

--- a/Subscribe Card/index.html
+++ b/Subscribe Card/index.html
@@ -24,8 +24,8 @@
             </div>
             <div class="card-input">
                 <form action="">
-                    <input type="email" placeholder="Enter your email">
-                    <button>Subscribe</button>
+                    <input class="email-input" type="email" placeholder="Enter your email" required>
+                    <button class="btn subscribe-btn">Subscribe</button>
                 </form>
             </div>
 
