--- a/Subscribe Card/index.html
+++ b/Subscribe Card/index.html
@@ -14,7 +14,8 @@
         <div class="card">
             <div class="card-icon">
                 <img class="envelope-icon"
-                    src="https://res.cloudinary.com/dvhndpbun/image/upload/v1590616019/envelope_qeguas.png" alt="">
+                    src="https://res.cloudinary.com/dvhndpbun/image/upload/v1590616019/envelope_qeguas.png" alt=""
+                    draggable="false">
             </div>
             <div class="card-text">
                 <h3>
