add "first ui" contents

--- a/Marketing App UI/index.html
+++ b/Marketing App UI/index.html
@@ -5,11 +5,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Marketing App UI</title>
+    <link href="https://fonts.googleapis.com/css2?family=Muli:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <main class="container">
+        <section class="ui ui-1">
+            <span class="ui--close">
+                <img class="close-icon" src="./img/close-icon.svg" alt="">
+            </span>
+            <div class="ui--input_search">
+                <img class="search-icon" src="./img/search-icon.svg" alt="">
+                <input class="search-input" type="search" placeholder="Search">
+            </div>
+            <div class="ui--menu">
+                <p>Audience</p>
+                <p>Reports</p>
+            </div>
+            <div class="ui--actions">
+                <button class="btn campaign-btn">Create campaign</button>
+            </div>
 
+            <div class="divider"></div>
+
+            <div class="ui--profile-wrapper">
+                <span class="profile-picture_wrapper">
+                    <img class="profile-image" src="./img/profile-img.png" alt="profile picture">
+                </span>
+                <span class="profile-details">
+                    <span>
+                        <h3 class="profile-name">Ray Floyd <span class="badge">pro</span></h3>
+
+                    </span>
+                    <span>
+                        <p>View account</p>
+                    </span>
+                </span>
+            </div>
+            <div class="ui--actions logout">
+                <img class="logout-icon" src="./img/logout-icon.svg" alt="">
+                <p>log Out</p>
+            </div>
+
+        </section>
+        <section class="ui ui-2"></section>
+    </main>
 </body>
 
 </html>
