add ui 2 contents

--- a/Marketing App UI/index.html
+++ b/Marketing App UI/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Marketing App UI</title>
-    <link href="https://fonts.googleapis.com/css2?family=Muli:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Muli:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -49,7 +49,45 @@
             </div>
 
         </section>
-        <section class="ui ui-2"></section>
+        <section class="ui ui-2">
+            <span class="ui--back">
+                <img class="arrow-back" src="./img/back-icon.svg" alt="">
+            </span>
+            <div class="ui--date">
+                <h1>Apr. 20 - 24</h1>
+                <p>Switch report</p>
+            </div>
+
+            <div class="ui--cards-wrapper">
+                <div class="card">
+                    <h2 card="card-header">943</h2>
+                    <p>Opened</p>
+                </div>
+                <div class="card">
+                    <h2 card="card-header">173</h2>
+                    <p>Clicked</p>
+                </div>
+                <div class="card">
+                    <h2 card="card-header">7</h2>
+                    <p>Bounced</p>
+                </div>
+                <div class="card">
+                    <h2 card="card-header">16</h2>
+                    <p>Unsubscribed</p>
+                </div>
+            </div>
+            <div class="ui--footer">
+                <div class="footer-item">
+                    <p>Successful deliveries</p>
+                    <h3>2,468</h3>
+
+                </div>
+                <div class="footer-item">
+                    <p>Total opens</p>
+                    <h3>1,322</h3>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
