feat: add page contents

--- a/Settings UI/index.html
+++ b/Settings UI/index.html
@@ -5,11 +5,88 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Settings</title>
+    <script src="./scripts/time.js" defer></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <main class="container">
+        <nav>
+            <div>
+                <img class="left-icons" src="./img/left-icons.svg" alt="">
+            </div>
+            <div id="displayTime">
 
+            </div>
+            <div>
+                <img class="right-icons" src="./img/right-icons.svg" alt="">
+            </div>
+        </nav>
+        <header class="header-container">
+            <span class="header-items">
+                <img src="./img/arrow-left.svg" alt="">
+                <h2>Settings</h2>
+            </span>
+
+        </header>
+
+        <section class="settings-body">
+            <div class="settings-items">
+                <ul>
+                    <a href="">
+                        <li>
+                            <img src="./img/general-edit.png" alt="" aria-hidden="true">
+                            General
+                        </li>
+                        <img src="./img/caret-right.svg" alt="" class="caret-right_icon">
+                    </a>
+                    <a href="">
+                        <li>
+                            <img src="./img/notification-edit.png" alt="" aria-hidden="true">
+                            Notifications
+                        </li>
+                        <img src="./img/caret-right.svg" alt="" class="caret-right_icon">
+                    </a>
+                    <a href="">
+                        <li>
+                            <img src="./img/screentime-edit.png" alt="" aria-hidden="true">
+                            Screen time
+                        </li>
+                        <img src="./img/caret-right.svg" alt="" class="caret-right_icon">
+                    </a>
+                    <a href="">
+                        <li>
+                            <img src="./img/language-edit.png" alt="" aria-hidden="true">
+                            Language & Region
+                        </li>
+                        <img src="./img/caret-right.svg" alt="" class="caret-right_icon">
+                    </a>
+                    <a href="">
+                        <li>
+                            <img src="./img/music-edit.png" alt="" aria-hidden="true">
+                            Sound
+                        </li>
+                        <img src="./img/caret-right.svg" alt="" class="caret-right_icon">
+                    </a>
+                    <a href="">
+                        <li>
+                            <img src="./img/sharing-edit.png" alt="" aria-hidden="true">
+                            Sharing
+                        </li>
+                        <img src="./img/caret-right.svg" alt="" class="caret-right_icon">
+                    </a>
+                    <a href="">
+                        <li>
+                            <img src="./img/date-edit.png" alt="" aria-hidden="true">
+                            Date & Time
+                        </li>
+                        <img src="./img/caret-right.svg" alt="" class="caret-right_icon">
+                    </a>
+                </ul>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
