fix: fix settings items cross browser issue

--- a/Settings UI/index.html
+++ b/Settings UI/index.html
@@ -17,7 +17,6 @@
                 <img class="left-icons" src="./img/left-icons.svg" alt="">
             </div>
             <div id="displayTime">
-
             </div>
             <div>
                 <img class="right-icons" src="./img/right-icons.svg" alt="">
@@ -28,61 +27,59 @@
                 <img src="./img/arrow-left.svg" alt="">
                 <h2>Settings</h2>
             </span>
-
         </header>
-
         <section class="settings-body">
             <div class="settings-items">
                 <ul>
-                    <a>
+                    <a href="#" onclick="return false">
                         <li>
                             <img src="./img/general-edit.png" alt="" aria-hidden="true">
-                            General
+                            <p>General</p>
                         </li>
                         <img src="./img/caret-right.svg" alt="" class="caret-right_icon">
                     </a>
-                    <a>
+                    <a href="#" onclick="return false">
                         <li>
                             <img src="./img/notification-edit.png" alt="" aria-hidden="true">
-                            Notifications
+                            <p>Notifications</p>
                         </li>
                         <img src="./img/caret-right.svg" alt="" class="caret-right_icon">
                     </a>
-                    <a>
+                    <a href="#" onclick="return false">
                         <li>
                             <img src="./img/screentime-edit.png" alt="" aria-hidden="true">
-                            Screen time
+                            <p>Screen time</p>
                         </li>
                         <img src="./img/caret-right.svg" alt="" class="caret-right_icon">
                     </a>
-                    <a>
+                    <a href="#" onclick="return false">
                         <li>
                             <img src="./img/language-edit.png" alt="" aria-hidden="true">
-                            Language & Region
+                            <p>Language & Region</p>
                         </li>
                         <img src="./img/caret-right.svg" alt="" class="caret-right_icon">
                     </a>
-                    <a>
+                    <a href="#" onclick="return false">
                         <li>
                             <img src="./img/music-edit.png" alt="" aria-hidden="true">
-                            Sound
+                            <p>Sound</p>
                         </li>
                         <img src="./img/caret-right.svg" alt="" class="caret-right_icon">
                     </a>
-                    <a>
+                    <a href="#" onclick="return false">
                         <li>
                             <img src="./img/sharing-edit.png" alt="" aria-hidden="true">
-                            Sharing
+                            <p>Sharing</p>
                         </li>
                         <img src="./img/caret-right.svg" alt="" class="caret-right_icon">
                     </a>
-                    <a>
+                    <a href="#" onclick="return false">
                         <li>
                             <img src="./img/date-edit.png" alt="" aria-hidden="true">
-                            Date & Time
+                            <p>Date & Time</p>
                         </li>
                         <img src="./img/caret-right.svg" alt="" class="caret-right_icon">
-                    </a>
+                    </a href="#" onclick="return false">
                 </ul>
             </div>
         </section>
