add page contents

--- a/Travel Guide/index.html
+++ b/Travel Guide/index.html
@@ -5,10 +5,91 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Travel Guide</title>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@700&text=Guide" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <header>
+        <nav>
+            <div class="logo">
+                <p class="logo-text">Guide</p>
+                <p>Travel more</p>
+            </div>
+            <label for="toggle-menu">
+                <input type="checkbox" name="" id="toggle-menu">
+                <div class="hamburger-wrapper">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+
+                <div class="nav-links">
+                    <span>
+                        <a href="">
+                            <p>Culture</p>
+                        </a>
+                        <a href="">
+                            <p>Life and people</p>
+                        </a>
+                    </span>
+                    <span>
+                        <a href="">
+                            <p>Read more</p>
+                        </a>
+                        <a href="">
+                            <p>Info and advices</p>
+                        </a>
+                    </span>
+                    <span>
+                        <a href="">
+                            <p>Cousine</p>
+                        </a>
+                        <a href="">
+                            <p>Must-tried food</p>
+                        </a>
+                    </span>
+                    <span>
+                        <a href="">
+                            <p>Places</p>
+                        </a>
+                        <a href="">
+                            <p>Explore and discover</p>
+                        </a>
+                    </span>
+                    <span>
+                        <a href="">
+                            <p>Activities</p>
+                        </a>
+                        <a href="">
+                            <p>Enjoy</p>
+                        </a>
+                    </span>
+                </div>
+            </label>
+
+        </nav>
+    </header>
+    <section class="hero">
+        <h1 class="hero--large_text">
+            Explore Lofoten lsland Norway
+        </h1>
+
+        <p class="hero--small_text">
+            If you want to see some of Norway's most beautiful landscape,
+            you couldn't go wrong with a trip to Lofoten.
+        </p>
+
+        <button class="btn">See more</button>
+
+        <div class="call-to-action">
+            <p>Norway</p>
+            <p>Travel Guide &#8734; Explore more with us</p>
+            <p><span>2019</span> Time for new challenges</p>
+
+        </div>
+    </section>
 
 </body>
 
