--- a/Travel Guide/index.html
+++ b/Travel Guide/index.html
@@ -27,44 +27,24 @@
 
                 <div class="nav-links">
                     <span>
-                        <a href="">
-                            <p>Culture</p>
-                        </a>
-                        <a href="">
-                            <p>Life and people</p>
-                        </a>
+                        <a href="">Culture</a>
+                        <div><a href="">Life and people</a></div>
                     </span>
                     <span>
-                        <a href="">
-                            <p>Read more</p>
-                        </a>
-                        <a href="">
-                            <p>Info and advices</p>
-                        </a>
+                        <a href="">Read more</a>
+                        <div><a href="">Info and advices</a></div>
                     </span>
                     <span>
-                        <a href="">
-                            <p>Cousine</p>
-                        </a>
-                        <a href="">
-                            <p>Must-tried food</p>
-                        </a>
+                        <a href="">Cousine</a>
+                        <div><a href="">Must-tried food</a></div>
                     </span>
                     <span>
-                        <a href="">
-                            <p>Places</p>
-                        </a>
-                        <a href="">
-                            <p>Explore and discover</p>
-                        </a>
+                        <a href="">Places</a>
+                        <div><a href="">Explore and discover</a></div>
                     </span>
                     <span>
-                        <a href="">
-                            <p>Activities</p>
-                        </a>
-                        <a href="">
-                            <p>Enjoy</p>
-                        </a>
+                        <a href="">Activities</a>
+                        <div><a href="">Enjoy</a></div>
                     </span>
                 </div>
             </label>
