add media breakpointa

--- a/Travel Guide/index.html
+++ b/Travel Guide/index.html
@@ -13,13 +13,13 @@
 <body>
     <header>
         <nav>
-            <div class="logo">
+            <div class="logo" aria-label="logo">
                 <p class="logo-text">Guide</p>
                 <p>Travel more</p>
             </div>
             <label for="toggle-menu">
                 <input type="checkbox" name="" id="toggle-menu">
-                <div class="hamburger-wrapper">
+                <div class="hamburger-wrapper" aria-label="open or close the menu" tabindex="0">
                     <span></span>
                     <span></span>
                     <span></span>
@@ -27,24 +27,24 @@
 
                 <div class="nav-links">
                     <span>
-                        <a href="">Culture</a>
-                        <div><a href="">Life and people</a></div>
+                        <a>Culture</a>
+                        <div><a>Life and people</a></div>
                     </span>
                     <span>
-                        <a href="">Read more</a>
-                        <div><a href="">Info and advices</a></div>
+                        <a>Read more</a>
+                        <div><a>Info and advices</a></div>
                     </span>
                     <span>
-                        <a href="">Cousine</a>
-                        <div><a href="">Must-tried food</a></div>
+                        <a>Cousine</a>
+                        <div><a>Must-tried food</a></div>
                     </span>
                     <span>
-                        <a href="">Places</a>
-                        <div><a href="">Explore and discover</a></div>
+                        <a>Places</a>
+                        <div><a>Explore and discover</a></div>
                     </span>
                     <span>
-                        <a href="">Activities</a>
-                        <div><a href="">Enjoy</a></div>
+                        <a>Activities</a>
+                        <div><a>Enjoy</a></div>
                     </span>
                 </div>
             </label>
