fix: fix dropdown menu disappearing issues

--- a/Travel Guide/index.html
+++ b/Travel Guide/index.html
@@ -11,43 +11,46 @@
 </head>
 
 <body>
+    <!-- Lazy load image -->
+    <img class="lazy-load" src="https://res.cloudinary.com/dvhndpbun/image/upload/q_12/v1591347437/norway-bg.jpg" alt=""
+        aria-hidden="true">
     <header>
         <nav>
             <div class="logo" aria-label="logo">
                 <p class="logo-text">Guide</p>
                 <p>Travel more</p>
             </div>
-            <label for="toggle-menu">
-                <input type="checkbox" name="" id="toggle-menu">
-                <div class="hamburger-wrapper" aria-label="open or close the menu" tabindex="0">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
+            <!-- <label for="toggle-menu"> -->
+            <input type="checkbox" name="" id="toggle-menu">
+            <div class="hamburger-wrapper" aria-label="open or close the menu" tabindex="0">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
 
-                <div class="nav-links">
-                    <span>
-                        <a>Culture</a>
-                        <div><a>Life and people</a></div>
-                    </span>
-                    <span>
-                        <a>Read more</a>
-                        <div><a>Info and advices</a></div>
-                    </span>
-                    <span>
-                        <a>Cousine</a>
-                        <div><a>Must-tried food</a></div>
-                    </span>
-                    <span>
-                        <a>Places</a>
-                        <div><a>Explore and discover</a></div>
-                    </span>
-                    <span>
-                        <a>Activities</a>
-                        <div><a>Enjoy</a></div>
-                    </span>
-                </div>
-            </label>
+            <!-- </label> -->
+            <div class="nav-links">
+                <span>
+                    <a>Culture</a>
+                    <div><a>Life and people</a></div>
+                </span>
+                <span>
+                    <a>Read more</a>
+                    <div><a>Info and advices</a></div>
+                </span>
+                <span>
+                    <a>Cousine</a>
+                    <div><a>Must-tried food</a></div>
+                </span>
+                <span>
+                    <a>Places</a>
+                    <div><a>Explore and discover</a></div>
+                </span>
+                <span>
+                    <a>Activities</a>
+                    <div><a>Enjoy</a></div>
+                </span>
+            </div>
 
         </nav>
     </header>
