feat: add media breakpoint

--- a/Stats Card/index.html
+++ b/Stats Card/index.html
@@ -13,41 +13,31 @@
     <main class="container">
         <div class="card-text">
             <h1 class="card-header">Marketing</h1>
-            <p>Elevate your marketing campaigns, with connective creative unlike any other — that
-                continuously convert: driving reach and revenue way up.</p>
-
+            <p>Elevate your marketing campaigns, with connective creative unlike any other — that continuously convert:
+                driving reach and revenue way up.</p>
             <a href="" class="btn cta">Read our Cases</a>
         </div>
         <div class="card-stats">
             <div class="top-stats">
                 <div class="top-stats-one">
                     <h2>+45%</h2>
-                    <p class="stats-desc">
-                        Client revenue
-                    </p>
+                    <p class="stats-desc"> Client revenue </p>
                 </div>
                 <div class="top-stats-two">
                     <h2>+29%</h2>
-                    <p class="stats-desc">
-                        Ad spend
-                    </p>
+                    <p class="stats-desc"> Ad spend </p>
                 </div>
             </div>
             <div class="bottom-stats">
                 <div class="bottom-stats-one">
                     <h2>+42%</h2>
-                    <p class="stats-desc">
-                        MAUs
-                    </p>
+                    <p class="stats-desc"> MAUs </p>
                 </div>
                 <div class="bottom-stats-two">
                     <h2>+98%</h2>
-                    <p class="stats-desc">
-                        Overall ROI
-                    </p>
+                    <p class="stats-desc"> Overall ROI </p>
                 </div>
             </div>
-
         </div>
     </main>
 </body>
