feat: add media breakpoints

--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -22,7 +22,7 @@
                     <li><a href="">Blog</a></li>
                 </ul>
                 <div class="nav-button">
-                    <a class="btn signin-btn" href="">Sign up</a>
+                    <a class="btn signup-btn" href="">Sign up</a>
                 </div>
             </div>
         </nav>
@@ -35,11 +35,62 @@
                     Anytime, anywhere.</h1>
             </div>
             <div class="hero-input">
+                <div class="location-input">
+                    <img class="location-icon" src="./img/location-icon.svg" alt="">
+                    <input type="text" name="location" id="location" placeholder="Ex. Amsterdam, New York, Paris…">
+                </div>
+                <div class="date-input">
+                    <img class="date-icon" src="./img/date-icon.svg" alt="">
+                    <input class="input-date" onfocus="(this.type='date')" placeholder="Dates">
+                </div>
 
+                <button class="btn search-btn" type="submit">Search</button>
             </div>
 
         </section>
-        <section class="landing-places_horizontal">
+        <section class="landing-places_hz">
+            <div class="place">
+                <div class="place-title">
+                    <h2>Grand Canyon All-
+                        <pre></pre> American Helicopter Tour</h2>
+                </div>
+                <div class="pricing">
+                    <p>from $396</p>
+                </div>
+                <div class="badge">
+                    <img class="tick" src="./img/tick.svg" alt="">
+                    <p>Free Cancellation</p>
+                </div>
+            </div>
+
+
+            <div class="place">
+                <div class="place-title">
+                    <h2>Skip the Line: NYC One World Observatory Ticket</h2>
+                </div>
+                <div class="pricing">
+                    <p>from $40</p>
+                </div>
+                <div class="badge">
+                    <img class="tick" src="./img/time.svg" alt="">
+                    <p>3 hours</p>
+                </div>
+            </div>
+
+
+
+            <div class="place">
+                <div class="place-title">
+                    <h2>Harry Potter Tour of Warner Bros. Studio in London</h2>
+                </div>
+                <div class="pricing">
+                    <p>from $199</p>
+                </div>
+                <div class="badge">
+                    <img class="tick" src="./img/tick.svg" alt="">
+                    <p>Free Cancellation</p>
+                </div>
+            </div>
 
         </section>
     </main>
