chore: format code

--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -31,8 +31,7 @@
     <main>
         <section class="hero">
             <div class="hero-text">
-                <h1>Find amazing things to do.
-                    Anytime, anywhere.</h1>
+                <h1>Find amazing things to do. Anytime, anywhere.</h1>
             </div>
             <div class="hero-input">
                 <div class="location-input">
@@ -43,11 +42,10 @@
                     <img class="date-icon" src="./img/date-icon.svg" alt="">
                     <input class="input-date" onfocus="(this.type='date')" placeholder="Dates">
                 </div>
-
                 <button class="btn search-btn" type="submit">Search</button>
             </div>
-
         </section>
+
         <section class="landing-places_hz">
             <div class="place">
                 <div class="place-title">
@@ -62,8 +60,6 @@
                     <p>Free Cancellation</p>
                 </div>
             </div>
-
-
             <div class="place">
                 <div class="place-title">
                     <h2>Skip the Line: NYC One World Observatory Ticket</h2>
@@ -76,9 +72,6 @@
                     <p>3 hours</p>
                 </div>
             </div>
-
-
-
             <div class="place">
                 <div class="place-title">
                     <h2>Harry Potter Tour of Warner Bros. Studio in London</h2>
@@ -91,7 +84,6 @@
                     <p>Free Cancellation</p>
                 </div>
             </div>
-
         </section>
     </main>
 </body>
